# xbus

./: README.md  aio.py  dbus.py  message.py  pyproject.toml
.github/workflows/: main.yml
tests/: test_client.py  test_marshal.py
xbus/: __init__.py  __main__.py  client.py  connection.py  glib.py  marshal.py  message.py  schema.py  utils.py
xibus/: __init__.py  client.py  connection.py  marshal.py  message.py
