[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xibus"
version = "0a1"
description = "pure python async D-Bus library"
readme = "README.md"
license = "MIT"
keywords = ["dbus", "asyncio"]
authors = [
    {name = "Tobias Bengfort", email = "tobias.bengfort@posteo.de"}
]

[project.urls]
Homepage = "https://github.com/xi/xibus"

[tool.coverage.run]
branch = true
include = ["xibus/**"]
